@@ -426,6 +426,14 @@ ldap.enable = false
 webui.ldap.autoregister = true
 
 
+##### LDAP users group #####
+
+# If required, a group name can be given here, and all users who log in
+# to LDAP will automatically become members of this group. This is useful
+# if you want a group made up of all internal authenticated users.
+#ldap.login.specialgroup = group-name
+
+
 ##### Hierarchical LDAP Settings #####
 
 # If your users are spread out across a hierarchical tree on your
@@ -459,13 +467,6 @@ webui.ldap.autoregister = true
 # ldap.netid_email_domain as '@example.com' would set the email of the user
 # to be 'user@example.com
 #ldap.netid_email_domain = @example.com
-
-##### LDAP users group #####
-
-# If required, a group name can be given here, and all users who log in
-# to LDAP will automatically become members of this group. This is useful
-# if you want a group made up of all internal authenticated users.
-#ldap.login.specialgroup = group-name
 
 
 #### Proxy Settings ######
